# polkit-dumb-agent

./: CMakeLists.txt  README.md  agent.cpp  agent.h  polkit-dumb-agent.desktop  pong.cpp  pong.h  pong.pro  sendreply.c  sudlg.cpp  sudlg.h
